OPENMUSIC/resources/lib/mac/SDIF.framework/Headers/sdif.h

/* forward declaration of big SDIF file struct type */
typedef struct SdifFileS SdifFileT;
/* SdifHash.h */
typedef enum SdifHashIndexTypeE
{
  eHashChar,
  eHashInt4
} SdifHashIndexTypeET;
typedef struct SdifHashTableS SdifHashTableT;
typedef struct SdifHashTableIteratorS SdifHashTableIteratorT;
typedef uint32_t       SdifUInt4;
typedef unsigned int   SdifUInt4;
typedef SdifUInt4      SdifSignature;
/* lists management */

typedef struct SdifListS SdifListT;
/* SdifNameValue.h */
typedef struct SdifNameValueS SdifNameValueT;
/* SdifMatrixType.h */
typedef struct SdifMatrixTypeS SdifMatrixTypeT;
struct SdifMatrixTypeS
{
  SdifSignature     Signature;

  SdifMatrixTypeT*  MatrixTypePre;

  SdifListT*        ColumnUserList; /* List of columns added by user: 
                                       SdifMatrixTypeInsertTailColumn(MatrixTypeT *)
                                    */

  SdifUInt4       NbColumnDef; /* Number of columns created by user:
                                  SdifMatrixTypeInsertTailColumn(MatrixTypeT *)
                               */
  SdifModifModeET ModifMode;
};
/* SdifFrameType.h */
typedef struct SdifComponentS SdifComponentT;
typedef struct SdifFrameTypeS SdifFrameTypeT;
struct SdifFrameTypeS
{
  SdifSignature Signature;

  SdifFrameTypeT* FrameTypePre;

  SdifHashTableT *ComponentUseHT;
  SdifUInt4       NbComponentUse;

  SdifUInt4       NbComponent;
  SdifModifModeET ModifMode;
};
/* SdifString.h */

typedef struct SdifStringS SdifStringT;
SDIF_API SdifFrameTypeT* SdifCreateFrameType (SdifSignature FramS, SdifFrameTypeT *PredefinedFrameType);
/**
 * Get number of matrix components defined in frame type. 
 */
SdifUInt4 SdifFrameTypeGetNbComponents (SdifFrameTypeT *FrameType);
/** 
 * Access a frame type component definition by matrix component number (starting from 1).
 */
SDIF_API SdifComponentT* SdifFrameTypeGetNthComponent    (SdifFrameTypeT *FrameType, SdifUInt4 NumC);
SDIF_API SdifFrameTypeT* SdifFrameTypePutComponent       (SdifFrameTypeT *FrameType, SdifSignature MtrxS, char *NameC);
/** Get matrix signature of frame component definition */
SdifSignature SdifFrameTypeGetComponentSignature (SdifComponentT *comp);
SDIF_API void            SdifPutFrameType       (SdifHashTableT *FrameTypeHT, SdifFrameTypeT *FrameType);
SDIF_API SdifHashTableT* SdifCreateHashTable(unsigned int HashSize, SdifHashIndexTypeET IndexType, void (*Killer)(void *));
SDIF_API unsigned int SdifHashTableGetNbData  (SdifHashTableT* HTable);
/*DOC:
  Allocate and initialise hash table iterator, return pointer to it */
SDIF_API SdifHashTableIteratorT* SdifCreateHashTableIterator (SdifHashTableT *HTable);
/*DOC:
  Deallocate hash table iterator created with SdifCreateHashTableIterator */
SDIF_API void SdifKillHashTableIterator (SdifHashTableIteratorT *iter);
/*DOC:
  Initialise hash table iterator given by pointer.
  [Returns] true if hash table has elements. */
SDIF_API int  SdifHashTableIteratorInitLoop (SdifHashTableIteratorT *iter, 
					     SdifHashTableT *HTable);
/*DOC:
  Test if iterator has more elements */
SDIF_API int  SdifHashTableIteratorIsNext (SdifHashTableIteratorT *iter);
/*DOC:
  Return current Data pointer and advance iterator */
SDIF_API void* SdifHashTableIteratorGetNext (SdifHashTableIteratorT *iter);
SDIF_API int         SdifListIsNext      (SdifListT* List);
SDIF_API unsigned int SdifListGetNbData  (SdifListT* List);
/*DOC:
  Init for function SdifListGetNext.
  [Returns] true if List has elements. */
SDIF_API int         SdifListInitLoop    (SdifListT* List);
/*DOC:
  Set Curr to Curr->Next and after return Curr->Data */
SDIF_API void*       SdifListGetNext     (SdifListT* List);
/*DOC: 
  premet de créer un objet 'type de matrice'. Le premier argument
  est la signature de ce type. Le second est l'objet 'type de matrice'
  prédéfini dans SDIF.<p>
  
  <strong>Important: Tous les types de matrices ou de frames utilisés
  dans une instance de SdifFileT doivent être ajoutés aux tables de
  cette instance, de façon a créer le lien avec les types
  prédéfinis.</strong> L'hors de la lecture des entêtes avec les
  fonctions SdifFReadMatrixHeader et SdifFReadFrameHeader, cette mise
  à jour se fait automatiquement à l'aide des fonctions
  SdifTestMatrixType et SdifTestFrameType. */
SDIF_API SdifMatrixTypeT* SdifCreateMatrixType              (SdifSignature Signature,
                                                                           SdifMatrixTypeT *PredefinedMatrixType);
/*DOC: 
  permet d'ajouter une colonne à un type (toujours la dernière
  colonne).  */
SDIF_API SdifMatrixTypeT* SdifMatrixTypeInsertTailColumnDef (SdifMatrixTypeT *MatrixType, const char *NameCD);
/*DOC: 
  Return number of columns defined for given matrix type. */
SdifUInt4 SdifMatrixTypeGetNbColumns (SdifMatrixTypeT *mtype);
/*DOC: 
  Return pointer to name of column at index, NULL if it doesn't exist. */
SDIF_API const char*  SdifMatrixTypeGetColumnName           (SdifMatrixTypeT *MatrixType, int index);
/*DOC: 
  permet d'ajouter un type de matrice dans une table.  */
SDIF_API void             SdifPutMatrixType(SdifHashTableT *MatrixTypesTable, SdifMatrixTypeT* MatrixType);
/*DOC:
  Remark:
         This function implements the new SDIF Specification (June 1999):
       Name Value Table, Matrix and Frame Type declaration, Stream ID declaration are
       defined in text matrix:
       1NVT 1NVT
       1TYP 1TYP
       1IDS 1IDS
  Get all types from a SdifStringT
*/
SDIF_API size_t SdifFGetAllTypefromSdifString (SdifFileT *SdifF, 
                                               SdifStringT *SdifString);
/**
 * Get table of matrix type definitions, 
 * useful for SdifGetMatrixType. 
 *
 * @ingroup types
 */
SDIF_API SdifHashTableT *SdifFGetMatrixTypesTable(SdifFileT *file);
/**
 * Get table of frame type definitions declare in this file's header only, 
 * useful for SdifGetFrameType. 
 *
 * @ingroup types
 */
SDIF_API SdifHashTableT *SdifFGetFrameTypesTable(SdifFileT *file);
/*DOC:
  Get value string of Name--Value entry */
SDIF_API char *SdifNameValueGetValue (SdifNameValueT *nv);
/*
//FUNCTION GROUP: Sdif String Handling
*/

/* SdifString.h */

/* Function declaration */

/*DOC:
  Make a memory allocation for a SdifStringT structure.
*/
SDIF_API SdifStringT * SdifStringNew(void);
/*DOC:
  Free memory allocated for SdifString.
*/
SDIF_API void SdifStringFree(SdifStringT * SdifString);
/*DOC:
  Append a string to another one.
  Manage memory reallocation.
  [Return] a boolean for the succes of the function's call.
*/
SDIF_API int SdifStringAppend(SdifStringT * SdifString, const char *strToAppend);
/*DOC:
  Read the current char (= fgetc).
*/
SDIF_API int SdifStringGetC(SdifStringT * SdifString);
/*DOC: 
  Cette fonction vérifie si le type de matrice est répertorié
  dans SdifF.<br> S'il ne l'est pas, alors elle vérifie si c'est un
  type prédéfinis. S'il est prédéfini, elle crée le lien de SdifF vers
  le type prédéfini. Sinon, elle envoie un message sur l'erreur
  standart.  */
SDIF_API SdifMatrixTypeT* SdifTestMatrixType (SdifFileT *SdifF, SdifSignature Signature);
SDIF_API SdifFrameTypeT*  SdifTestFrameType  (SdifFileT *SdifF, SdifSignature Signature);