OPENMUSIC/code/api/externals/SDIF/sdif.lisp


(cffi:defcfun  ("SdifNameValueGetValue" SdifNameValueGetValueSTR) :pointer (NV :pointer))

(defun SdifNameValueGetValue (nv)
  (cffi::foreign-string-to-lisp (sdif::SdifNameValueGetValueSTR nv)))





;;;=================================
;;;TYPES TABLE

(cffi:defcfun  ("SdifFGetMatrixTypesTable" SdifFGetMatrixTypesTable)  :pointer  (file :pointer))

(cffi:defcfun  ("SdifFGetFrameTypesTable" SdifFGetFrameTypesTable) :pointer  (file :pointer))

(cffi:defcfun  ("SdifCreateMatrixType" SdifCreateMatrixType) :pointer (Signature :unsigned-int) (SdifMatrixTypeT :pointer))

(cffi:defcfun  ("SdifPutMatrixType" SdifPutMatrixType) :void (mtable :pointer) (SdifMatrixTypeT :pointer))

(cffi:defcfun  ("SdifMatrixTypeInsertTailColumnDef" SdifMatrixTypeInsertTailColumnDefSTR) :pointer (matrix :pointer) (str sdif-name))

(defun SdifMatrixTypeInsertTailColumnDef (matrixtype name)
  (cffi:with-foreign-string (strname name)
    (sdif::SdifMatrixTypeInsertTailColumnDefSTR matrixtype strname)))

(cffi:defcfun  ("SdifCreateFrameType" SdifCreateFrameType) :pointer (Signature :unsigned-int) (SdifMatrixTypeT :pointer))

(cffi:defcfun  ("SdifPutFrameType" SdifPutFrameType) :void (ftable :pointer) (SdifFrameTypeT :pointer))

(cffi:defcfun  ("SdifFrameTypePutComponent" SdifFrameTypePutComponentSTR) :pointer (frame :pointer) (sign :unsigned-int) (str sdif-name))

(defun SdifFrameTypePutComponent (frametype sign name)
  (cffi:with-foreign-string (strname name)
    (sdif::SdifFrameTypePutComponentSTR frametype sign strname)))


(cffi:defcfun  ("SdifTestMatrixType" SdifTestMatrixType) :pointer (sdifF :pointer) (signature :pointer))

(cffi:defcfun  ("SdifTestFrameType" SdifTestFrameType) :pointer (sdifF :pointer) (signature :pointer))

(cffi:defcfun  ("SdifMatrixTypeGetColumnName" SdifMatrixTypeGetColumnNameSTR) :pointer (MatrixType :pointer) (num :int))

(defun SdifMatrixTypeGetColumnName (mtype num) 
  (cffi::foreign-string-to-lisp (sdif::SdifMatrixTypeGetColumnNameSTR mtype num)))

(cffi:defcfun  ("SdifMatrixTypeGetNbColumns" SdifMatrixTypeGetNbColumns) :int (MatrixType :pointer))

(cffi:defcfun  ("SdifFrameTypeGetNbComponents" SdifFrameTypeGetNbComponents) :int (FrameType :pointer))

(cffi:defcfun  ("SdifFrameTypeGetNthComponent" SdifFrameTypeGetNthComponent) :pointer (FrameType :pointer) (num :int))

(cffi:defcfun  ("SdifFrameTypeGetComponentSignature" SdifFrameTypeGetComponentSignature) :pointer (Component :pointer))

;;;=================================
;;; STRING

(cffi:defcfun ("SdifStringNew" SdifStringNew) :pointer)

(cffi:defcfun ("SdifStringFree" SdifStringFree) :void (str :pointer))

(cffi:defcfun ("SdifStringAppend" SdifStringAppendSTR) :int (str :pointer) (str1 :pointer))

(defun SdifStringAppend (ptr str)
  (cffi:with-foreign-string (strp str)
    (setf rep (sdif::SdifStringAppendSTR ptr strp))))

(cffi:defcfun ("SdifStringGetC" SdifStringGetC) :int (str :pointer))

(cffi:defcfun ("SdifFGetAllTypefromSdifString" SdifFGetAllTypefromSdifString) :unsigned-int (file :pointer) (str :pointer))
  


;;;=================================
;;; LIST

(cffi:defcfun ("SdifListGetNbData" SdifListGetNbData) :unsigned-int (list :pointer))

(cffi:defcfun ("SdifListInitLoop" SdifListInitLoop) :int (list :pointer))

(cffi:defcfun ("SdifListIsNext" SdifListIsNext) :int (list :pointer))

(cffi:defcfun ("SdifListGetNext" SdifListGetNext) :pointer (list :pointer))


;;;=================================
;;; HASH TABLE ITERATOR

(cffi:defcfun ("SdifHashTableGetNbData" SdifHashTableGetNbData) :unsigned-int (sdifhashtable :pointer))

(cffi:defcfun ("SdifCreateHashTableIterator" SdifCreateHashTableIterator) :pointer (sdifhashtable :pointer))

(cffi:defcfun ("SdifKillHashTableIterator" SdifKillHashTableIterator) :void (htiterator :pointer))

(cffi:defcfun ("SdifHashTableIteratorInitLoop" SdifHashTableIteratorInitLoop) :pointer (htiterator :pointer) (sdifhashtable :pointer))

(cffi:defcfun ("SdifHashTableIteratorIsNext" SdifHashTableIteratorIsNext) :int (htiterator :pointer))

(cffi:defcfun ("SdifHashTableIteratorGetNext" SdifHashTableIteratorGetNext) :pointer (htiterator :pointer))
